--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 <!-- Landing Page -->
     <div class="landing-page d-flex">
         <div class="color-left"></div>
-        <div class="color-right"></div>
+        <div class="color-right d-flex">
+            <div class="social d-flex">
+                <img class="gHub-logo logo-format" src="./assets/github.png" alt="gitHub-logo">
+                <img class="linked-logo logo-format" src="./assets/Linkedin2.png" alt="linkedIn-logo">
+                <img class="ig-logo logo-format" src="./assets/NicePng_black-square-png_150003.png" alt="instagram-logo">
+            </div>
+        </div>
         <div class="hello-border"></div>
         <div class="hello">
             <h1 class="hello-top">HE</h1>
